--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 										<h2><a href="https://github.com/champades/BMI-Calculator">Body Mass Index (BMI) Calculator<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/champades/BMI-Calculator" class="image fit"><img src="images/BMI.jpeg" alt="" /></a>
+									<a href="https://github.com/champades/BMI-Calculator" class="image fit"><img src="images/BMI.jpg" alt="" /></a>
 									<p>This project seamlessly blends health and technology, showcasing the implementation of a Python-based BMI calculator to help find out if you're a healthy weight for your height. </p>
 									<ul class="actions special">
 										<li><a href="https://github.com/champades/BMI-Calculator" class="button">View Project</a></li>
