--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/champades/Power-BI-Dashboard---Maven-Market-Report"Maven Analytics Superstore Analysis<br />
+										<h2><a href="https://github.com/champades/Power-BI-Dashboard---Maven-Market-Report">Maven Analytics Superstore Analysis<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/champades/Power-BI-Dashboard---Maven-Market-Report" class="image fit"><img src="images/mvad.jpg" alt="" /></a>
